--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.7.1",
+    "gulp": "^3.8.11",
     "gulp-install": "^0.4.0"
   }
 }
