--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browser-sync": "^2.7.1",
     "gulp": "^3.8.11",
-    "gulp-install": "^0.4.0"
+    "gulp-install": "^0.4.0",
+    "gulp-livereload": "^3.8.0"
   }
 }
