--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^3.3.4",
     "browser-sync": "^2.7.1",
+    "font-awesome": "^4.3.0",
     "gulp": "^3.8.11",
     "gulp-install": "^0.4.0",
     "gulp-livereload": "^3.8.0"
