--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "^3.3.4",
+    "bower": "^1.4.1",
     "browser-sync": "^2.7.1",
     "font-awesome": "^4.3.0",
     "gulp": "^3.8.11",
+    "gulp-bower": "0.0.10",
     "gulp-install": "^0.4.0",
-    "gulp-livereload": "^3.8.0"
+    "gulp-livereload": "^3.8.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.0.1"
   }
 }
