--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-bower": "0.0.10",
     "gulp-install": "^0.4.0",
     "gulp-livereload": "^3.8.0",
+    "gulp-ng-html2js": "^0.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.0.1"
   }
