--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "font-awesome": "^4.3.0",
     "gulp": "^3.8.11",
     "gulp-bower": "0.0.10",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.5.2",
     "gulp-install": "^0.4.0",
     "gulp-livereload": "^3.8.0",
     "gulp-ng-html2js": "^0.2.0",
