--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-ng-html2js": "^0.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.0.1"
+  },
+  "dependencies": {
+    "gulp": "^3.8.11"
   }
 }
